fixed dark mode color change issue

--- a/dark-flower/styles.css
+++ b/dark-flower/styles.css
@@ -19,7 +19,7 @@ main {
     padding: 10px;
     width: 100%;
     height: 70vh;
-    background-color: #4d2547;
+    background-color: pink;
 }
 
 #flowerpicture {
@@ -41,7 +41,7 @@ main {
     position: absolute;
     bottom: 0;
     left: 1em;
-    color: black;
+    color: white;
     font-size: 2.5em;
 }
 
@@ -54,17 +54,31 @@ main h3, p, ul {
 }
 
 body.darkMode {
-    background-color: black;
-    color: white;
-}
-
-body.darkMode h1 {
+    background-color: #4d2547;
     color: white;
 }
 
 body.darkMode main {
+    background-color: #4d2547;
     color: white;
 }
+
+body.darkMode h3 {
+    background-color: #4d2547;
+    color: white;
+}
+
+body.darkMode p {
+    background-color: #4d2547;
+    color: white;
+}
+
+body.darkMode ul {
+    background-color: #4d2547;
+    color: white;
+}
+
+
 @media screen and (orientation: landscape) {
 
     #flowerpicture {
@@ -81,6 +95,7 @@ body.darkMode main {
 
     #flowertitle h1 {
         width: 45vw;
+        color: black;
     }
 main {
     position: absolute;
@@ -92,5 +107,31 @@ main {
     color: black;
     font-size: 30px;
 }
+
+    #toggleDarkMode {
+    margin-top: 2em;
+}
+
+#toggleDarkMode {
+    margin-top: 2em;
+}
     
+body.darkMode {
+    background-color: #4d2547;
+    color: white;
+}
+
+body.darkMode #flowertitle {
+    background-color: #4d2547;
+}
+
+body.darkMode #flowertitle h1 {
+    color: white;
+}
+
+body.darkMode main {
+    background-color: #4d2547;
+    color: white;
+}
+
 }
